--- a/docs/demos/tutorials/02_Exploratory_analysis.ipynb
+++ b/docs/demos/tutorials/02_Exploratory_analysis.ipynb
@@ -16,6 +16,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a812977e",
+   "metadata": {},
+   "source": [
+    "### Set up your environment\n",
+    "\n",
+    "To set up a fresh environment for this tutorial, run the following code in the terminal:\n",
+    "\n",
+    "```sh\n",
+    "python3 -m venv ~/venvs/splink_tutorial\n",
+    ". ~/venvs/splink_tutorial/bin/activate\n",
+    "pip install splink notebook\n",
+    "jupyter notebook\n",
+    "```"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "96a3d08d",
